[tool.poetry]
authors = ["DataLens Team <datalens-opensource@yandex-team.ru>"]
description = ""
license = "Apache 2.0"
name = "datalens-metapackage"
packages = [{include = "bi_ci_dummy"}]
version = "0.2.0"

[tool.poetry.dependencies]
aiobotocore = "==2.19.0"
aiodns = "==3.1.1"
aiogoogle = "==5.2.0"
aiohttp = ">=3.12.14"
aiomysql = "==0.2.0"
aiopg = "==1.4.0"
antlr4-python3-runtime = "==4.11.1"
anyascii = "==0.3.2"
arq = "==0.25.0"
async-timeout = "==4.0.3"
asyncpg = "==0.29.0"
attrs = "==22.2.0"
Babel = "==2.12.1"
boto3 = "==1.36.3"
botocore = "==1.36.3"
certifi = "==2024.8.30"
cffi = "==1.16.0"
ciso8601 = "==2.2.0"
clickhouse-driver = "==0.2.6"
cryptography = "==43.0.1"
dill = "==0.3.6"
faust-cchardet = ">=2.1.19"
flask = "==2.2.5"
flask-marshmallow = "==1.1.0"
flask-restx = "==1.1.0"
frozendict = "==2.3.8"
google-api-core = "==2.15.0"
google-auth = "==2.21.0"
google-cloud-bigquery = "==3.14.1"
google-cloud-bigquery-storage = "==2.24.0"
google-cloud-core = "==2.4.1"
google-resumable-media = "==2.5.0"
googleapis-common-protos = "==1.59.1"
graphviz = "==0.17"
grpcio = "==1.60.0"
gunicorn = "==23.0.0"
idna = "==3.10"
ipdb = "==0.13.13"
ipython = "==8.10.0"
jaeger-client = "==4.8.0"
jinja2 = "==3.1.4"
lz4 = "==4.3.2"
marshmallow = "==3.19.0"
marshmallow-oneofschema = "==3.1.0"
more-itertools = "==9.1.0"
msgpack = "==1.1.0"
numpy = "==1.26.4"
openpyxl = "==3.0.10"
opentracing = "==2.4.0"
oracledb = "==2.0.0"
orjson = "==3.9.15"
pandas = "==2.0.3"
protobuf = "==4.24.3"
psycopg2-binary = "==2.9.9"
pyjwt = "==2.4.0"
pymysql = "==1.1.1"
pyodbc = "==5.2.0"
pyopenssl = "==24.2.1"
pytest = "==7.2.2"
python = ">=3.10, <3.13"
python-dateutil = "==2.8.2"
pytz = "==2022.7.1"
pyyaml = "==6.0.1"
redis = "==5.0.1"
requests = "==2.32.3"
sentry-sdk = "==1.15.0"
shortuuid = "==1.0.11"
snowflake-connector-python = "==3.13.1"
snowflake-sqlalchemy = "==1.5.1"
sqlalchemy = "==1.4.46, <2.0"
sqlalchemy-bigquery = "==1.9.0"
tabulate = "==0.9.0"
tornado = "==6.4.2"
typeguard = "==4.1.5"
typing-extensions = "==4.9.0"
ujson = "==1.35"
urllib3 = "==1.26.20"
werkzeug = "==3.0.6"
xxhash = "==3.2.0"
yarl = "==1.18.3"
zipp = "==3.21.0"

[tool.poetry.group.app_dl_os_control_api.dependencies]
dl-control-api = {develop = true, path = "../app/dl_control_api"}

[tool.poetry.group.app_dl_os_data_api.dependencies]
dl-data-api = {develop = true, path = "../app/dl_data_api"}

[tool.poetry.group.ci.dependencies]
#
# All apps should be listed here. This group is installed for CI & local development
#
clickhouse-sqlalchemy = {develop = true, path = "../lib/clickhouse-sqlalchemy"}
dl-api-client = {develop = true, path = "../lib/dl_api_client"}
dl-api-commons = {develop = true, path = "../lib/dl_api_commons"}
dl-api-connector = {develop = true, path = "../lib/dl_api_connector"}
dl-api-lib = {develop = true, path = "../lib/dl_api_lib"}
dl-api-lib-testing = {develop = true, path = "../lib/dl_api_lib_testing"}
dl-app-tools = {develop = true, path = "../lib/dl_app_tools"}
dl-attrs-model-mapper = {develop = true, path = "../lib/dl_attrs_model_mapper"}
dl-attrs-model-mapper-doc-tools = {develop = true, path = "../lib/dl_attrs_model_mapper_doc_tools"}
dl-auth-api-lib = {develop = true, path = "../lib/dl_auth_api_lib"}
dl-auth-native = {develop = true, path = "../lib/dl_auth_native"}
dl-cache-engine = {develop = true, path = "../lib/dl_cache_engine"}
dl-compeng-pg = {develop = true, path = "../lib/dl_compeng_pg"}
dl-configs = {develop = true, path = "../lib/dl_configs"}
dl-connector-bigquery = {develop = true, path = "../lib/dl_connector_bigquery"}
dl-connector-bitrix-gds = {develop = true, path = "../lib/dl_connector_bitrix_gds"}
dl-connector-bundle-chs3 = {develop = true, path = "../lib/dl_connector_bundle_chs3"}
dl-connector-chyt = {develop = true, path = "../lib/dl_connector_chyt"}
dl-connector-clickhouse = {develop = true, path = "../lib/dl_connector_clickhouse"}
dl-connector-greenplum = {develop = true, path = "../lib/dl_connector_greenplum"}
dl-connector-metrica = {develop = true, path = "../lib/dl_connector_metrica"}
dl-connector-mssql = {develop = true, path = "../lib/dl_connector_mssql"}
dl-connector-mysql = {develop = true, path = "../lib/dl_connector_mysql"}
dl-connector-oracle = {develop = true, path = "../lib/dl_connector_oracle"}
dl-connector-postgresql = {develop = true, path = "../lib/dl_connector_postgresql"}
dl-connector-promql = {develop = true, path = "../lib/dl_connector_promql"}
dl-connector-snowflake = {develop = true, path = "../lib/dl_connector_snowflake"}
dl-connector-trino = {develop = true, path = "../lib/dl_connector_trino"}
dl-connector-ydb = {develop = true, path = "../lib/dl_connector_ydb"}
dl-constants = {develop = true, path = "../lib/dl_constants"}
dl-core = {develop = true, path = "../lib/dl_core"}
dl-core-testing = {develop = true, path = "../lib/dl_core_testing"}
dl-dashsql = {develop = true, path = "../lib/dl_dashsql"}
dl-db-testing = {develop = true, path = "../lib/dl_db_testing"}
dl-file-secure-reader-lib = {develop = true, path = "../lib/dl_file_secure_reader_lib"}
dl-file-uploader-api-lib = {develop = true, path = "../lib/dl_file_uploader_api_lib"}
dl-file-uploader-lib = {develop = true, path = "../lib/dl_file_uploader_lib"}
dl-file-uploader-task-interface = {develop = true, path = "../lib/dl_file_uploader_task_interface"}
dl-file-uploader-worker-lib = {develop = true, path = "../lib/dl_file_uploader_worker_lib"}
dl-formula = {develop = true, path = "../lib/dl_formula"}
dl-formula-ref = {develop = true, path = "../lib/dl_formula_ref"}
dl-formula-testing = {develop = true, path = "../lib/dl_formula_testing"}
dl-httpx = {develop = true, path = "../lib/dl_httpx"}
dl-i18n = {develop = true, path = "../lib/dl_i18n"}
dl-maintenance = {develop = true, path = "../lib/dl_maintenance"}
dl-model-tools = {develop = true, path = "../lib/dl_model_tools"}
dl-package-boilerplate = {develop = true, path = "../lib/dl_package_boilerplate"}
dl-pivot = {develop = true, path = "../lib/dl_pivot"}
dl-pivot-pandas = {develop = true, path = "../lib/dl_pivot_pandas"}
dl-query-processing = {develop = true, path = "../lib/dl_query_processing"}
dl-rate-limiter = {extras = ["aiohttp", "flask"], path = "../lib/dl_rate_limiter"}
dl-retrier = {develop = true, path = "../lib/dl_retrier"}
dl-rls = {develop = true, path = "../lib/dl_rls"}
dl-s3 = {develop = true, path = "../lib/dl_s3"}
dl-settings = {develop = true, path = "../lib/dl_settings"}
dl-sqlalchemy-bitrix = {develop = true, path = "../lib/dl_sqlalchemy_bitrix"}
dl-sqlalchemy-chyt = {develop = true, path = "../lib/dl_sqlalchemy_chyt"}
dl-sqlalchemy-clickhouse = {develop = true, path = "../lib/dl_sqlalchemy_clickhouse"}
dl-sqlalchemy-common = {develop = true, path = "../lib/dl_sqlalchemy_common"}
dl-sqlalchemy-metrica-api = {develop = true, path = "../lib/dl_sqlalchemy_metrica_api"}
dl-sqlalchemy-mssql = {develop = true, path = "../lib/dl_sqlalchemy_mssql"}
dl-sqlalchemy-mysql = {develop = true, path = "../lib/dl_sqlalchemy_mysql"}
dl-sqlalchemy-oracle = {develop = true, path = "../lib/dl_sqlalchemy_oracle"}
dl-sqlalchemy-postgres = {develop = true, path = "../lib/dl_sqlalchemy_postgres"}
dl-sqlalchemy-promql = {develop = true, path = "../lib/dl_sqlalchemy_promql"}
dl-task-processor = {develop = true, path = "../lib/dl_task_processor"}
dl-testing = {develop = true, path = "../lib/dl_testing"}
dl-type-transformer = {develop = true, path = "../lib/dl_type_transformer"}
dl-us-client = {develop = true, path = "../lib/dl_us_client"}
dl-utils = {develop = true, path = "../lib/dl_utils"}
dl-version = {develop = true, path = "../lib/dl_version"}
dl-zitadel = {develop = true, path = "../lib/dl_zitadel"}
dynamic-enum = {develop = true, path = "../lib/dynamic_enum"}
redis_cache_lock = {develop = true, path = "../lib/redis-cache-lock"}
statcommons = {develop = true, path = "../lib/statcommons"}

[tool.poetry.group.dev.dependencies]
babel = "==2.12.1"
black = "==23.12.1"
clize = "==5.0.0"
deptry = "==0.16.1"
docker = "==7.1.0"
flaky = "==3.8.1"
ipdb = "==0.13.13"
isort = "==5.13.2"
mock = "==4.0.3"
oracledb = "==2.0.0"
pandas = "==2.0.3"
paramiko = "==3.1.0"
platformdirs = "==3.11.0"
poetry = "==1.7.1"
psycopg2-binary = "==2.9.9"
pytest = "==7.2.2"
pytest-aiohttp = "==1.0.5"
pytest-asyncio = "==0.21.0"
pytest-lazy-fixture = "==0.6.3"
pytest-mock = "==3.12.0"
python-dateutil = "==2.8.2"
pytz = "==2022.7.1"
responses = "==0.23.1"
respx = "==0.22.0"
ruff = "==0.2.1"
sentry-sdk = "==1.15.0"
shortuuid = "==1.0.11"
toml-sort = "==0.24.2"
tomlkit = "==0.13.3"
uwsgi = "==2.0.23"
virtualenv = "==20.30.0"

[tool.poetry.group.mypy.dependencies]
asyncpg-stubs = "==0.29.0"
boto3-stubs = "==1.36.3"
botocore-stubs = "==1.36.3"
grpc-stubs = "==1.53.0.5"
mypy = "==1.7.0"
pandas-stubs = "==2.1.4.231227"
types-aiobotocore = "==2.19.0"
types-aiofiles = "==23.1.0"
types-cffi = "==1.16.0"
types-colorama = "==0.4.6"
types-cryptography = "==3.3.23.2"
types-decorator = "==5.1.1"
types-flask-sqlalchemy = "==2.5.1"
types-html5lib = "==1.1"
types-jmespath = "==1.0.1"
types-mock = "==4.0.3"
types-mypy-extensions = "==1.0.0"
types-opentracing = "==2.4.0"
types-paramiko = "==3.2.0"
types-pexpect = "==4.8.0"
types-pluggy = "==1.2.0"
types-protobuf = "==3.20.3"
types-psycopg2 = "==2.9.9"
types-Pygments = "==2.15.0.2"
types-PyMySQL = "==1.1.0"
types-pymysql = "==1.1.0"
types-pyopenssl = "==23.2.0"
types-pytest-lazy-fixture = "==0.6.3"
types-python-dateutil = "==2.8.2"
types-pytz = "==2022.7.1"
types-pywin32 = "==306"
types-redis = "==4.6.0.20240311"
types-requests = "==2.31.0.6"
types-s3transfer = "==0.6.2"
types-setuptools = "==69.0.0.20240115"
types-six = "==1.16.0"
types-sqlalchemy = "==1.4.51"
types-tabulate = "==0.9.0"
types-toml = "==0.10.2"
types-tzlocal = "==5.0.1"
types-ujson = "==5.8.0.1"
types-urllib3 = "==1.26.20"

[tool.pytest.ini_options]
addopts = "-ra"
minversion = "6.0"
testpaths = []

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[datalens.meta.mypy]
targets = [] # ignore mypy for this module

[datalens.meta.mypy_common]
# ; to make `disallow_untyped_defs = False` overrides more useful:
check_untyped_defs = true
disallow_untyped_defs = true
strict_optional = true
# this section will be inserted into all packages under
warn_unused_configs = true

[datalens.meta.mypy_stubs_packages_override]
# bunch of overrides for different case
# : src package -> {"name": "non standard name, but same stub should have same version"}
# : src package -> {"name": "non standard name", "version": "hard coded version"}
# : src package -> {"version": "hard coded version"}  # implies standard types-{pkg name} name
# : src package -> {"ignore": true} # stub doesn't exist
aiogoogle = {ignore = true}
aiohttp = {ignore = true}
aioitertools = {ignore = true}
aiomysql = {ignore = true}
aiopg = {ignore = true}
aiosignal = {ignore = true}
aniso8601 = {ignore = true}
antlr4-python3-runtime = {ignore = true}
anyascii = {ignore = true}
appnope = {ignore = true}
arq = {ignore = true}
asn1crypto = {ignore = true}
asttokens = {ignore = true}
async-timeout = {ignore = true}
asyncpg = {name = "asyncpg-stubs"}
attrs = {ignore = true}
babel = {ignore = true}
backcall = {ignore = true}
black = {ignore = true}
boto3 = {name = "boto3-stubs"}
botocore = {name = "botocore-stubs"}
build = {ignore = true}
"cachecontrol[filecache]" = {ignore = true}
cachetools = {ignore = true}
certifi = {ignore = true}
charset-normalizer = {ignore = true}
ciso8601 = {ignore = true}
cleo = {ignore = true}
click = {ignore = true}
clickhouse-driver = {ignore = true}
clize = {ignore = true}
crashtest = {ignore = true}
dill = {ignore = true}
distlib = {ignore = true}
dnspython = {ignore = true}
docutils = {ignore = true}
dulwich = {ignore = true}
et-xmlfile = {ignore = true}
exceptiongroup = {ignore = true}
executing = {ignore = true}
faust-cchardet = {ignore = true}
filelock = {ignore = true}
flask = {ignore = true}
flask-marshmallow = {ignore = true}
flask-restx = {ignore = true}
frozendict = {ignore = true}
frozenlist = {ignore = true}
google-api-core = {ignore = true}
"google-api-core[grpc]" = {ignore = true}
google-auth = {ignore = true}
google-cloud-bigquery = {ignore = true}
google-cloud-bigquery-storage = {ignore = true}
google-cloud-core = {ignore = true}
google-resumable-media = {ignore = true}
googleapis-common-protos = {ignore = true}
graphviz = {ignore = true}
greenlet = {ignore = true}
grpcio = {ignore = true}
gunicorn = {ignore = true}
hiredis = {ignore = true}
idna = {ignore = true}
importlib-metadata = {ignore = true}
iniconfig = {ignore = true}
installer = {ignore = true}
ipdb = {ignore = true}
ipython = {ignore = true}
itsdangerous = {ignore = true}
jaeger-client = {ignore = true}
jaraco-classes = {ignore = true}
jedi = {ignore = true}
jeepney = {ignore = true}
jinja2 = {ignore = true}
jsonschema = {ignore = true}
keyring = {ignore = true}
lockfile = {ignore = true}
lz4 = {ignore = true}
markupsafe = {ignore = true}
marshmallow = {ignore = true}
matplotlib-inline = {ignore = true}
more-itertools = {ignore = true}
msgpack = {ignore = true}
multidict = {ignore = true}
numpy = {ignore = true}
od = {ignore = true}
openpyxl = {ignore = true}
oracledb = {ignore = true}
oscrypto = {ignore = true}
packaging = {ignore = true}
pandas = {name = "pandas-stubs", version = "2.1.4.231227"}
parso = {ignore = true}
pathspec = {ignore = true}
pickleshare = {ignore = true}
pkginfo = {ignore = true}
platformdirs = {ignore = true}
poetry = {ignore = true}
poetry-core = {ignore = true}
poetry-plugin-export = {ignore = true}
prompt-toolkit = {ignore = true}
protobuf = {ignore = true}
psycopg2-binary = {name = "types-psycopg2"}
ptyprocess = {ignore = true}
pure-eval = {ignore = true}
pyasn1 = {ignore = true}
pyasn1-modules = {ignore = true}
pycares = {ignore = true}
pycparser = {ignore = true}
pycryptodomex = {ignore = true}
pygments = {name = "types-Pygments", version = "2.15.0.2"}
pyjwt = {ignore = true}
pymysql = {ignore = true}
pyodbc = {ignore = true}
pyproject-hooks = {ignore = true}
pyrsistent = {ignore = true}
pytest = {ignore = true}
pytest-asyncio = {ignore = true}
python-dotenv = {ignore = true}
pywin32-ctypes = {ignore = true}
pyyaml = {ignore = true}
rapidfuzz = {ignore = true}
"redis[hiredis]" = {ignore = true}
requests-toolbelt = {ignore = true}
responses = {ignore = true}
rsa = {ignore = true}
ruff = {ignore = true}
secretstorage = {ignore = true}
sentry-sdk = {ignore = true}
shellingham = {ignore = true}
shortuuid = {ignore = true}
sigtools = {ignore = true}
snowflake-connector-python = {ignore = true}
snowflake-sqlalchemy = {ignore = true}
sqlalchemy-bigquery = {ignore = true}
sqlparse = {ignore = true}
stack-data = {ignore = true}
threadloop = {ignore = true}
thrift = {ignore = true}
tomli = {ignore = true}
tomlkit = {ignore = true}
tonyg-rfc3339 = {ignore = true}
tornado = {ignore = true}
traitlets = {ignore = true}
trove-classifiers = {ignore = true}
typeguard = {ignore = true}
types-pyyaml = {ignore = true}
typing-extensions = {ignore = true}
tzdata = {ignore = true}
ujson = {version = "5.8.0.1"}
uwsgi = {ignore = true}
virtualenv = {ignore = true}
wcwidth = {ignore = true}
webencodings = {ignore = true}
werkzeug = {ignore = true}
wrapt = {ignore = true}
xattr = {ignore = true}
xxhash = {ignore = true}
yarl = {ignore = true}
zipp = {ignore = true}
