
[tool.poetry]
name = "bi-alerts"
version = "0.117.0"
description = ""
authors = ["Sergey Borodin <seray@yandex-team.ru>"]
packages = [{include = "bi_alerts"}]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
SQLAlchemy = ">=1.4.46, <2.0"
aiohttp = ">=3.8.1"
aiopg = ">=1.4.0"
alembic = ">=1.6.5"
certifi = ">=2022.12.7"
granular-settings = ">=1.4"
gunicorn = ">=20.1.0"
marshmallow = ">=3.19.0"
marshmallow-enum = ">=1.5.1"
python = ">=3.10, <3.12"
sentry-sdk = ">=1.15.0"
shortuuid = ">=1.0.11"
sqlalchemy = ">=1.4.46, <2.0"
yandex-bi-api-commons = {path = "../../lib/bi_api_commons"}
yandex-bi-blackbox-client = {path = "../../lib/bi_blackbox_client"}
yandex-bi-constants = {path = "../../lib/bi_constants"}
yandex-bi-core = {path = "../../lib/bi_core"}
yandex-bi-utils = {path = "../../lib/bi_utils"}

[tool.poetry.group.tests.dependencies]
pytest-asyncio = ">=0.20.3"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["bi_alerts_tests/db", "bi_alerts_tests/unit"]

[tool.ruff]
line-length = 140
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.black]
line-length = 140
target-version = ['py310']





[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[datalens.pytest.local]
root_dir = "bi_alerts_tests/"
target_path = "unit db"
