
[tool.poetry]
name = "yandex-bi-api"
version = "0.0.0"
description = ""
authors = ["Dmitry Fedorov <dmifedorov@yandex-team.ru>"]
packages = [{include = "bi"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
Flask = ">=2.0.3"
Flask-SQLAlchemy = ">=2.5.1"
SQLAlchemy = ">=1.4.46, <2.0"
Werkzeug = ">=2.0.3"
arq = ">=0.25.0"
attrs = ">=22.2.0"
blinker = ">=1.5"
certifi = ">=2022.12.7"
certifi-yandex = ">=2021.10.08"
flask-marshmallow = ">=0.14.0"
flask-restx = ">=1.1.0"
graphviz = ">=0.17"
gunicorn = ">=20.1.0"
ipdb = ">=0.13.13"
ipython = ">=8.10.0"
marshmallow = ">=3.19.0"
marshmallow-oneofschema = ">=3.0.1"
pandas = ">=1.5.3"
pyopenssl = ">=21.0.0"
pytest-asyncio = ">=0.20.3"
python = ">=3.10, <3.12"
python-dateutil = ">=2.8.2"
raven = ">=6.10.0"
requests = ">=2.28.2"
sentry-sdk = ">=1.15.0"
sqlalchemy-gsheets = {path = "../../lib/bi_sqlalchemy_gsheets"}
sqlalchemy-metrika-api = {path = "../../lib/sqlalchemy_metrika_api"}
tabulate = ">=0.9.0"
bi-api-lib-ya = {path = "../../lib/bi_api_lib_ya"}
yandex-bi-cloud-integration = {path = "../../lib/bi_cloud_integration"}
yandex-bi-connector-bitrix-gds = {path = "../../lib/bi_connector_bitrix_gds"}
yandex-bi-connector-bundle-ch-filtered = {path = "../../lib/bi_connector_bundle_ch_filtered"}
yandex-bi-connector-bundle-ch-filtered-ya-cloud = {path = "../../lib/bi_connector_bundle_ch_filtered_ya_cloud"}
yandex-bi-connector-bundle-ch-frozen = {path = "../../lib/bi_connector_bundle_ch_frozen"}
yandex-bi-connector-bundle-partners = {path = "../../lib/bi_connector_bundle_partners"}
yandex-bi-connector-gsheets = {path = "../../lib/bi_connector_gsheets"}
yandex-bi-connector-metrica = {path = "../../lib/bi_connector_metrica"}
yandex-bi-connector-monitoring = {path = "../../lib/bi_connector_monitoring"}
yandex-bi-connector-usage-tracking-ya-team = {path = "../../lib/bi_connector_usage_tracking_ya_team"}
bi-connector-mysql-mdb = {path = "../../lib/bi_connector_mysql_mdb"}
yandex-bi-connector-yql = {path = "../../lib/bi_connector_yql"}
yandex-bi-dls-client = {path = "../../lib/bi_dls_client"}
yandex-bi-sqlalchemy-bitrix = {path = "../../lib/bi_sqlalchemy_bitrix"}
yandex-bi-sqlalchemy-mysql = {path = "../../lib/bi_sqlalchemy_mysql"}
yandex-bi-sqlalchemy-solomon = {path = "../../lib/bi_sqlalchemy_solomon"}
yandex-bi-sqlalchemy-yq = {path = "../../lib/bi_sqlalchemy_yq"}
bi-connector-greenplum-mdb = {path = "../../lib/bi_connector_greenplum_mdb"}
bi-connector-postgresql-mdb = {path = "../../lib/bi_connector_postgresql_mdb"}
bi-connector-solomon = {path = "../../lib/bi_connector_solomon"}
bi-connector-clickhouse-mdb = {path = "../../lib/bi_connector_clickhouse_mdb"}
statinfra-clickhouse-sqlalchemy = {path = "../../mainrepo/lib/clickhouse-sqlalchemy"}
statcommons = {path = "../../mainrepo/lib/statcommons"}
bi-maintenance = {path = "../../lib/bi_maintenance"}
bi-defaults = {path = "../../lib/bi_defaults"}
yandex-bi-connector-oracle = {path = "../../lib/bi_connector_oracle"}
yandex-bi-connector-mssql = {path = "../../lib/bi_connector_mssql"}
datalens-version-ya = {path = "../../lib/dl_version_ya"}
datalens-file-uploader-task-interface = {path = "../../mainrepo/lib/dl_file_uploader_task_interface"}
datalens-sqlalchemy-postgres = {path = "../../mainrepo/lib/dl_sqlalchemy_postgres"}
datalens-utils = {path = "../../mainrepo/lib/dl_utils"}
datalens-sqlalchemy-common = {path = "../../mainrepo/lib/dl_sqlalchemy_common"}
datalens-constants = {path = "../../mainrepo/lib/dl_constants"}
datalens-connector-promql = {path = "../../mainrepo/lib/dl_connector_promql"}
datalens-connector-bundle-chs3 = {path = "../../mainrepo/lib/dl_connector_bundle_chs3"}
datalens-sqlalchemy-clickhouse = {path = "../../mainrepo/lib/dl_sqlalchemy_clickhouse"}
datalens-sqlalchemy-chyt = {path = "../../mainrepo/lib/dl_sqlalchemy_chyt"}
datalens-sqlalchemy-mssql = {path = "../../mainrepo/lib/dl_sqlalchemy_mssql"}
datalens-sqlalchemy-promql = {path = "../../mainrepo/lib/dl_sqlalchemy_promql"}
datalens-formula = {path = "../../mainrepo/lib/dl_formula"}
datalens-connector-snowflake = {path = "../../mainrepo/lib/dl_connector_snowflake"}
datalens-configs = {path = "../../mainrepo/lib/dl_configs"}
datalens-api-connector = {path = "../../mainrepo/lib/dl_api_connector"}
datalens-core = {path = "../../mainrepo/lib/dl_core"}
datalens-app-tools = {path = "../../mainrepo/lib/dl_app_tools"}
datalens-model-tools = {path = "../../mainrepo/lib/dl_model_tools"}
datalens-api-lib = {path = "../../mainrepo/lib/dl_api_lib"}
datalens-connector-bigquery = {path = "../../mainrepo/lib/dl_connector_bigquery"}
datalens-task-processor = {path = "../../mainrepo/lib/dl_task_processor"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry.scripts]
setup-iptables = "bi.bin.setup_iptables:main"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []


[datalens_ci]
skip_test = true


[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[datalens.meta.mypy_common]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
