
[tool.poetry]
name = "bi-external-api"
version = "0.0.0"
description = ""
authors = ["Konstantin Chupin <kchupin@yandex-team.ru>"]
packages = [
    {include = "bi_external_api"},
]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
aiohttp = ">=3.8.1"
docker = ">=6.0.1"
grpcio-health-checking = ">=1.44.0"
grpcio-reflection = ">=1.44.0"
gunicorn = ">=20.1.0"
python = ">=3.10, <3.12"
pyyaml = ">=5.3.1"
sentry-sdk = ">=1.15.0"
bi-api-lib-ya = {path = "../../lib/bi_api_lib_ya"}
yandex-bi-api-commons-ya-cloud = {path = "../../lib/bi_api_commons_ya_cloud"}
yandex-bi-api-commons-ya-team = {path = "../../lib/bi_api_commons_ya_team"}
yandex-dc-public-api-proto-stubs = {path = "../../lib/dc_public_api_proto_stubs"}
bi-defaults = {path = "../../lib/bi_defaults"}
dynamic-enum = {path = "../../mainrepo/lib/dynamic_enum"}
datalens-api-commons = {path = "../../mainrepo/lib/dl_api_commons"}
datalens-us-client = {path = "../../mainrepo/lib/dl_us_client"}
datalens-constants = {path = "../../mainrepo/lib/dl_constants"}
datalens-configs = {path = "../../mainrepo/lib/dl_configs"}
datalens-core = {path = "../../mainrepo/lib/dl_core"}
datalens-model-tools = {path = "../../mainrepo/lib/dl_model_tools"}
datalens-api-lib = {path = "../../mainrepo/lib/dl_api_lib"}

[tool.poetry.group.tests.dependencies]
pytest = ">=7.2.2"
pytest-asyncio = ">=0.20.3"
uwsgi = ">=2.0.21"
datalens-version-ya = {path = "../../lib/dl_version_ya"}
yandex-bi-api = {path = "../../app/bi_api"}
datalens-api-lib-testing = {path = "../../mainrepo/lib/dl_api_lib_testing"}
datalens-sqlalchemy-clickhouse = {path = "../../mainrepo/lib/dl_sqlalchemy_clickhouse"}
datalens-testing = {path = "../../mainrepo/lib/dl_testing"}
datalens-core-testing = {path = "../../mainrepo/lib/dl_core_testing"}
datalens-db-testing = {path = "../../mainrepo/lib/dl_db_testing"}

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = ["bi_external_api_tests", "bi_external_api_tests/db", "bi_external_api_tests/local", "bi_external_api_tests/unit"]


[tool.poetry.scripts]
bi-ext-api-grpc-proxy = "bi_external_api.grpc_proxy.server:main"

[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[datalens.pytest.unit]
root_dir = "bi_external_api_tests/unit"
target_path = "."

[datalens.pytest.local]
root_dir = "bi_external_api_tests/db"
target_path = "."

#[datalens.pytest.ext]
#root_dir = "bi_core_tests/"
#target_path = "dc dc_preprod int_preprod local local_int_prod"
#labels = ["ext"]


[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
