[tool.poetry]
name = "bi-file-secure-reader"
version = "0.0.0"
description = ""
authors = ["Sergey Borodin <seray@yandex-team.ru>"]
packages = [{include = "bi_file_secure_reader"}]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
gunicorn = ">=20.1.0"
datalens-version-ya = {path = "../../lib/dl_version_ya"}
datalens-file-secure-reader-lib = {path = "../../mainrepo/lib/dl_file_secure_reader_lib"}

[tool.poetry.group.tests.dependencies]
pytest-asyncio = ">=0.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []


[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[datalens_ci]
skip_test = true

[tool.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
