
[tool.poetry]
name = "bi-file-uploader"
version = "0.115.0"
description = ""
authors = ["Andrey Snytin <asnytin@yandex-team.ru>"]
packages = [{include = "bi_file_uploader"}]
license = "MIT"
readme = "README.md"


[tool.poetry.dependencies]
aiobotocore = ">=2.4.2"
aiogoogle = ">=5.2.0"
aiohttp = ">=3.8.1"
arq = ">=0.25.0"
attrs = ">=22.2.0"
bi-defaults = {path = "../../lib/bi_defaults"}
docker = ">=6.0.1"
gunicorn = ">=20.1.0"
marshmallow = ">=3.19.0"
python = ">=3.10, <3.12"
sentry-sdk = ">=1.15.0"
yandex-bi-api-commons-ya-team = {path = "../../lib/bi_api_commons_ya_team"}
yandex-bi-connector-bundle-chs3 = {path = "../../mainrepo/lib/bi_connector_bundle_chs3"}
yandex-bi-core = {path = "../../mainrepo/lib/bi_core"}
yandex-bi-file-uploader-api-lib = {path = "../../mainrepo/lib/bi_file_uploader_api_lib"}
yandex-bi-file-uploader-lib = {path = "../../mainrepo/lib/bi_file_uploader_lib"}
bi-file-uploader-task-interface = {path = "../../mainrepo/lib/bi_file_uploader_task_interface"}
bi-task-processor = {path = "../../mainrepo/lib/bi_task_processor"}

[[tool.mypy.overrides]]
module = "zope.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "aiogoogle.*"
follow_imports = "skip"

[[tool.mypy.overrides]]
module = "dill.*"
follow_imports = "skip"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra"
testpaths = []

[tool.ruff]
line-length = 140
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I"
]

[tool.black]
line-length = 140
target-version = ['py310']

[datalens_ci]
skip_test = true


[[tool.poetry.source]]
name = "ya"
url = "https://pypi.yandex-team.ru/simple/"
priority = "default"

[tools.mypy]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_optional = true
